Fixer le contenu pour laligner

--- a/src/pages/Accueil.css
+++ b/src/pages/Accueil.css
@@ -42,18 +42,20 @@
     background-color: #380049;
     border-radius: 10px;
     padding: 25px;
+    /* height: 550px; */
 }
 
 .editionTitre {
-
+    height: 15%;
 }
 
 .editionPrix {
-
+    
 }
 
 .editionDescription {
     text-align: left;
+    height: 30%;
 }
 
 .editionListeAttributs {
